force-app/main/default/objects/KakaoTalkButton__c/KakaoTalkButton__c.object-meta.xml
<CustomObject>
    <description>카카오 템플릿 버튼 리스트(알림톡, 친구톡)</description>
    <label>Kakao Talk Button</label>
    <nameField>
        <label>Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kakao Talk Button</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>