force-app/main/default/objects/KakaoTalkButton__c/fields/Button_Type__c.field-meta.xml
<CustomField>
    <fullName>Button_Type__c</fullName>
    <description>버튼 타입 
배송조회 : DS, 봇키워드 : BK, 메시지 전달 : MD, 웹링크 : WL, 앱링크 : AL</description>
    <inlineHelpText>배송조회 : DS, BK : 봇키워드, MD : 메시지 전달 : MD, 웹링크 : WL, 앱링크 : AL</inlineHelpText>
    <label>Button Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DS</fullName>
                <label>배송조회</label>
            </value>
            <value>
                <fullName>BK</fullName>
                <label>봇키워드</label>
            </value>
            <value>
                <fullName>MD</fullName>
                <label>메시지 전달</label>
            </value>
            <value>
                <fullName>WL</fullName>
                <label>웹링크</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>앱링크</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>