force-app/main/default/objects/KakaoTalkButton__c/fields/ButtonLink1__c.field-meta.xml
<CustomField>
    <fullName>ButtonLink1__c</fullName>
    <description>버튼 링크 1 - 설명 Sheet 참고</description>
    <label>Button Link 1</label>
    <type>Url</type>
</CustomField>