force-app/main/default/objects/KakaoTalkButton__c/fields/ButtonLink2__c.field-meta.xml
<CustomField>
    <fullName>ButtonLink2__c</fullName>
    <description>버튼 링크 2 - 설명 Sheet 참고</description>
    <label>Button Link 2</label>
    <type>Url</type>
</CustomField>