force-app/main/default/objects/KakaoTalkButton__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ButtonLink1__c</columns>
    <columns>ButtonLink2__c</columns>
    <columns>Button_Type__c</columns>
    <columns>NotificationTemplates__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>